Add prometheus metrics collection & endpoint

--- a/.env.sample
+++ b/.env.sample
@@ -38,3 +38,5 @@ GLANCE_HEALTH_TIMEOUT=30
 # to raise this value.
 GLANCE_HEALTH_TIMER_INTERVAL=15
 
+# Enable collection of Prometheus Metrics
+GLANCE_METRICS=false
